# DeskPoE

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  dependencies.json
scripts/: dependenciesLoader.py
scripts/linux/: project-init
scripts/windows/: project-init.bat
src/: CMakeLists.txt  WindowComponent.qml  item.qml  main.cpp  main.qml  qml.qrc
src/authorization/: redditmodel.cpp  redditmodel.hpp  redditwrapper.cpp  redditwrapper.hpp
src/interfaces/: ICreator.h  IPanel.hpp
src/panels/: WindowBuilder.hpp
src/panels/examplePanel1/: examplePanel1.cpp  examplePanel1.hpp  examplePanel1Creator.cpp  examplePanel1Creator.hpp
src/userSettings/: SettingsManager.cpp  SettingsManager.hpp
test/: CMakeLists.txt
test/src/: exampleTest.cpp
